proxy list connotation to list-item

--- a/components/list/src/vwc-list-item.scss
+++ b/components/list/src/vwc-list-item.scss
@@ -1,16 +1,10 @@
 @use '@vonage/vvd-typography/scss/typography' as typography;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-style-coupling/scss/vvd-formfield' as vvd-formfield;
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation with (
-	$connotations-set: primary cta
-);
 
 $vvd-list-item-block-size: --vvd-list-item-block-size;
 $vvd-list-item-side-padding: --vvd-list-item-side-padding;
 $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
-
-@include color-connotation.connotations-main;
-@include color-connotation.connotations-main-default(primary);
 
 :host {
 	--mdc-list-side-padding: var(#{$vvd-list-item-side-padding});
@@ -37,17 +31,9 @@ $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
 }
 
 :host([activated]) {
-	--mdc-theme-text-icon-on-background: var(
-		#{color-connotation.$vvd-color-on-connotation}
-	);
-	--mdc-theme-text-hint-on-background: var(
-		#{color-connotation.$vvd-color-on-connotation}
-	);
-	--mdc-ripple-color: var(#{color-connotation.$vvd-color-on-connotation});
-
 	@include typography.typography-cat-shorthand('body-2-bold');
 	z-index: 0;
-	color: var(#{color-connotation.$vvd-color-on-connotation});
+	color: var(--vvd-list-item-activated-color);
 
 	mwc-ripple,
 	.fake-activated-ripple {
@@ -56,12 +42,12 @@ $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
 
 	.fake-activated-ripple {
 		--mdc-ripple-activated-opacity: 1;
-		--mdc-ripple-color: var(#{color-connotation.$vvd-color-connotation});
+		--mdc-ripple-color: var(--vvd-list-item-activated-ripple-color);
 	}
 
 	mwc-ripple {
 		--mdc-ripple-activated-opacity: 0;
-		background-color: var(#{color-connotation.$vvd-color-connotation});
+		background-color: var(--vvd-list-item-activated-ripple-background);
 	}
 }
 
