add text-parts import

--- a/components/list/src/vwc-list-item.scss
+++ b/components/list/src/vwc-list-item.scss
@@ -1,3 +1,4 @@
+@forward './vwc-list-text-parts.scss';
 @use '@vonage/vvd-typography/scss/typography' as typography;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-style-coupling/scss/vvd-formfield' as vvd-formfield;
