--- a/components/calendar/src/vwc-calendar.scss
+++ b/components/calendar/src/vwc-calendar.scss
@@ -1,3 +1,4 @@
+@use 'vwc-calendar-variables' as calendar-variables;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
 @use '@vonage/vvd-typography/scss/typography';
 
@@ -6,13 +7,6 @@ ol {
 	margin: 0;
 	list-style: none;
 }
-
-// snap fraction within an hour
-$fraction: 4;
-// the rows according to hours a day
-$total-rows: 24;
-// number of columns according to days of week
-$total-columns: 7;
 
 .container {
 	display: grid;
@@ -27,7 +21,7 @@ $total-columns: 7;
 .time {
 	display: grid;
 	grid-area: time;
-	grid-template-rows: repeat($total-rows, 1fr);
+	grid-template-rows: repeat(calendar-variables.$total-rows, 1fr);
 	margin-inline-end: 15px;
 	> li {
 		display: flex;
@@ -46,7 +40,7 @@ $total-columns: 7;
 .headline {
 	display: grid;
 	grid-area: headline;
-	grid-template-columns: repeat($total-columns, 1fr);
+	grid-template-columns: repeat(calendar-variables.$total-columns, 1fr);
 	> li > time {
 		@include typography.typography-cat-shorthand('caption');
 		text-transform: uppercase;
@@ -54,24 +48,22 @@ $total-columns: 7;
 }
 
 .calendar {
-	$sum: $total-rows * $total-columns;
-	$next: 1;
 	display: grid;
 	overflow: hidden;
-	background-color: var(#{scheme-variables.$vvd-color-neutral-20});
-	border-radius: 3.64752px;
+	background-color: var(#{scheme-variables.$vvd-color-neutral-20}, rgb(128, 128, 128));
+	border-radius: 6px;
 	box-shadow: 0 0 3.64752px rgba(0, 0, 0, 0.15);
 	counter-reset: listing;
 	gap: 1px;
 	grid-area: calendar;
 	grid-auto-flow: column;
-	grid-template: repeat($total-rows * $fraction, 1fr) / repeat(
-		$total-columns,
+	grid-template: repeat(calendar-variables.$total-rows * calendar-variables.$fraction, 1fr) / repeat(
+		calendar-variables.$total-columns,
 		1fr
 	);
 	> [role="listitem"i] {
 		height: 35px;
-		background-color: var(#{scheme-variables.$vvd-color-base});
+		background-color: var(#{scheme-variables.$vvd-color-base}, rgb(255, 255, 255));
 		grid-column: var(--column);
 		grid-row: var(--row);
 		&::before {
@@ -83,19 +75,23 @@ $total-columns: 7;
 		}
 	}
 
-	@for $i from 1 through $total-rows {
-		$current-row: $i * $fraction - $fraction + 1;
-		[role="listitem"i]:nth-child(#{$total-rows}n + #{$i}) {
-			--row: #{$current-row} / span #{$fraction};
+	@for $i from 1 through calendar-variables.$total-rows {
+		$current-row: $i * calendar-variables.$fraction - calendar-variables.$fraction + 1;
+		[role="listitem"i]:nth-child(#{calendar-variables.$total-rows}n + #{$i}) {
+			--row: #{$current-row} / span #{calendar-variables.$fraction};
 		}
 	}
-	@for $i from 1 through $total-columns {
-		$sum: $sum - $total-rows + 1;
-		[role="listitem"i]:nth-child(1n + #{$next}):nth-last-child(1n + #{$sum}) {
+
+	@for $i from 1 through calendar-variables.$total-columns {
+		/* extra 2 for the sibling events wrapper and the self containment */
+		$total-cells: calendar-variables.$total-columns * calendar-variables.$total-rows + 2;
+
+		$from: $i * calendar-variables.$total-rows - calendar-variables.$total-rows + 1;
+		$less: $total-cells - $i * calendar-variables.$total-rows;
+
+		[role="listitem"i]:nth-child(1n + #{$from}):nth-last-child(1n + #{$less}) {
 			--column: #{$i};
 		}
-		/* stylelint-disable-next-line order/order */
-		$next: $next + $total-rows;
 	}
 }
 
