--- a/components/list/src/vwc-list-item.scss
+++ b/components/list/src/vwc-list-item.scss
@@ -2,6 +2,9 @@
 @use '@vonage/vvd-typography/scss/typography' as typography;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-style-coupling/scss/vvd-formfield' as vvd-formfield;
+@use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation with (
+	$connotations-set: primary cta
+);
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with (
 	$variable-name: --vvd-list-item-shape
 );
@@ -9,6 +12,9 @@
 $vvd-list-item-block-size: --vvd-list-item-block-size;
 $vvd-list-item-side-padding: --vvd-list-item-side-padding;
 $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
+
+@include color-connotation.connotations-main;
+@include color-connotation.connotations-main-default(primary);
 
 :host {
 	--mdc-list-side-padding: var(#{$vvd-list-item-side-padding});
@@ -25,12 +31,42 @@ $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
 	@include typography.typography-cat-shorthand('body-2');
 	@include vvd-formfield.coupling;
 
+	position: relative;
 	height: var(#{$vvd-list-item-block-size});
-
 	border-radius: var(--vvd-list-item-shape);
+
 	#{$vvd-list-item-block-size}: 40px;
 	#{$vvd-list-item-side-padding}: 24px;
 	#{$vvd-list-item-graphic-margin}: 16px;
+}
+
+:host([activated]) {
+	--mdc-theme-text-icon-on-background: var(
+		#{color-connotation.$vvd-color-on-connotation}
+	);
+	--mdc-theme-text-hint-on-background: var(
+		#{color-connotation.$vvd-color-on-connotation}
+	);
+	--mdc-ripple-color: var(#{color-connotation.$vvd-color-on-connotation});
+
+	@include typography.typography-cat-shorthand('body-2-bold');
+	z-index: 0;
+	color: var(#{color-connotation.$vvd-color-on-connotation});
+
+	mwc-ripple,
+	.fake-activated-ripple {
+		z-index: -1;
+	}
+
+	.fake-activated-ripple {
+		--mdc-ripple-activated-opacity: 1;
+		--mdc-ripple-color: var(#{color-connotation.$vvd-color-connotation});
+	}
+
+	mwc-ripple {
+		--mdc-ripple-activated-opacity: 0;
+		background-color: var(#{color-connotation.$vvd-color-connotation});
+	}
 }
 
 :host([graphic='icon']:not([twoline])) {
