--- a/components/snackbar/src/vwc-snackbar.scss
+++ b/components/snackbar/src/vwc-snackbar.scss
@@ -1,6 +1,8 @@
 @use '@vonage/vvd-typography/scss/typography' as typography;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation;
+@use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation with (
+	$connotations-set: success alert warning info announcement
+);
 
 :host {
 	@include typography.typography-cat-shorthand('caption');
@@ -21,6 +23,7 @@
 	}
 
 	.mdc-snackbar__surface {
+		overflow: hidden;
 		padding: 0;
 		background: none;
 		border-radius: 6px;
