--- a/components/snackbar/src/vwc-snackbar.scss
+++ b/components/snackbar/src/vwc-snackbar.scss
@@ -29,7 +29,50 @@
 		border-radius: 6px;
 		box-shadow: 0 6px 8px rgba(0, 0, 0, 0.05), 0 12px 16px rgba(0, 0, 0, 0.05), 0 4px 24px rgba(0, 0, 0, 0.1);
 	}
+}
 
+// default flavor
+:host(:not([legacy])) {
+	.vivid-snackbar {
+		display: flex;
+		flex: 1;
+	}
+
+	vwc-note {
+		flex: 1;
+		border: 0;
+		box-shadow: none;
+	}
+	::part(icon) {
+		color: var(#{color-connotation.$vvd-color-connotation});
+	}
+
+	.actions-container {
+		display: flex;
+		padding: 16px 0;
+	}
+
+	.action-container {
+		display: flex;
+		flex: 1 0 auto;
+		align-items: center;
+	}
+
+	.action-container ::slotted(*) {
+		margin-inline-end: 16px;
+	}
+
+	.dismiss-container {
+		display: flex;
+		align-items: center;
+		align-self: stretch;
+		padding: 0 16px;
+		border-inline-start: 1px solid var(#{scheme-variables.$vvd-color-neutral-30});
+	}
+}
+
+//	legacy flavor
+:host([legacy]) {
 	.vivid-snackbar {
 		width: 100%;
 	}
@@ -57,16 +100,5 @@
 		.dismiss-container .dismiss-button {
 			transform: translate(4px, -28px);
 		}
-	}
-}
-
-// legacy
-:host(:not([legacy])) {
-	vwc-note {
-		border: 0;
-		box-shadow: none;
-	}
-	::part(icon) {
-		color: var(#{color-connotation.$vvd-color-connotation});
 	}
 }
