issue #864: fixed the paddings

--- a/components/snackbar/src/vwc-snackbar.scss
+++ b/components/snackbar/src/vwc-snackbar.scss
@@ -69,7 +69,7 @@
 		align-items: center;
 		align-self: stretch;
 		padding: 0 16px;
-		border-inline-start: 1px solid var(#{scheme-variables.$vvd-color-neutral-30});
+		border-left: 1px solid var(#{scheme-variables.$vvd-color-neutral-30});
 	}
 }
 
