--- a/components/snackbar/src/vwc-snackbar.scss
+++ b/components/snackbar/src/vwc-snackbar.scss
@@ -68,8 +68,14 @@
 		display: flex;
 		align-items: center;
 		align-self: stretch;
-		padding: 0 16px;
-		border-left: 1px solid var(#{scheme-variables.$vvd-color-neutral-30});
+		margin-inline-end: 16px;
+
+		&::before {
+			align-self: stretch;
+			border-left: 1px solid var(#{scheme-variables.$vvd-color-neutral-30});
+			content: ' ';
+			margin-inline-end: 16px;
+		}
 	}
 }
 
