--- a/components/expansion-panel/src/vwc-expansion-panel.scss
+++ b/components/expansion-panel/src/vwc-expansion-panel.scss
@@ -63,6 +63,7 @@
 .expansion-panel-body {
 	@include typography.typography-cat-shorthand('body-2');
 	padding: 8px 32px 24px 16px;
+	contain: content;
 }
 
 :host(:not([icon=''])),
