--- a/components/surface/src/vwc-surface.scss
+++ b/components/surface/src/vwc-surface.scss
@@ -1,9 +1,7 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 
 :host {
-	.mdc-snackbar__surface {
-		padding: 0;
-		background: none;
+	.mdc-menu-surface {
 		border-radius: 6px;
 		box-shadow: 0 6px 8px rgba(0, 0, 0, 0.05), 0 12px 16px rgba(0, 0, 0, 0.05), 0 4px 24px rgba(0, 0, 0, 0.1);
 	}
