--- a/components/snackbar/src/vwc-snackbar.scss
+++ b/components/snackbar/src/vwc-snackbar.scss
@@ -1,6 +1,8 @@
 @use '@vonage/vvd-typography/scss/typography' as typography;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation;
+@use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation with (
+	$connotations-set: success alert warning info announcement
+);
 
 :host {
 	@include typography.typography-cat-shorthand('caption');
@@ -21,12 +23,64 @@
 	}
 
 	.mdc-snackbar__surface {
+		overflow: hidden;
 		padding: 0;
 		background: none;
 		border-radius: 6px;
 		box-shadow: 0 6px 8px rgba(0, 0, 0, 0.05), 0 12px 16px rgba(0, 0, 0, 0.05), 0 4px 24px rgba(0, 0, 0, 0.1);
 	}
+}
 
+// default flavor
+:host(:not([legacy])) {
+	.vivid-snackbar {
+		display: flex;
+		flex: 1;
+	}
+
+	.note {
+		flex: 1;
+		align-self: center;
+		padding: 16px;
+		border: 0;
+		box-shadow: none;
+	}
+	::part(icon) {
+		color: var(#{color-connotation.$vvd-color-connotation});
+	}
+
+	.actions-container {
+		display: flex;
+		padding: 16px 0;
+	}
+
+	.action-container {
+		display: flex;
+		flex: 1 0 auto;
+		align-items: center;
+	}
+
+	.action-container ::slotted(*) {
+		margin-inline-end: 16px;
+	}
+
+	.dismiss-container {
+		display: flex;
+		align-items: center;
+		align-self: stretch;
+		margin-inline-end: 16px;
+
+		&::before {
+			align-self: stretch;
+			border-left: 1px solid var(#{scheme-variables.$vvd-color-neutral-30});
+			content: ' ';
+			margin-inline-end: 16px;
+		}
+	}
+}
+
+//	legacy flavor
+:host([legacy]) {
 	.vivid-snackbar {
 		width: 100%;
 	}
@@ -54,16 +108,5 @@
 		.dismiss-container .dismiss-button {
 			transform: translate(4px, -28px);
 		}
-	}
-}
-
-// legacy
-:host(:not([legacy])) {
-	vwc-note {
-		border: 0;
-		box-shadow: none;
-	}
-	::part(icon) {
-		color: var(#{color-connotation.$vvd-color-connotation});
 	}
 }
