--- a/components/dropdown/src/vwc-dropdown.scss
+++ b/components/dropdown/src/vwc-dropdown.scss
@@ -1,10 +1,23 @@
-:host {
-	.dropdown-container {
-		padding: 16px;
-	}
+.dropdown-content {
+	padding: 24px;
+}
 
-	[name=footer] {
-		display: flex;
-		gap: 8px;
+.section {
+	display: flex;
+}
+
+.section.body {
+	display: block;
+	width: calc(100% + 48px);
+	margin-inline-start: -24px;
+}
+
+// actions
+.section.actions {
+	display: flex;
+	justify-content: flex-end;
+
+	::slotted(vwc-button) {
+		margin-inline-start: 8px;
 	}
 }
