--- a/components/surface/src/vwc-surface.scss
+++ b/components/surface/src/vwc-surface.scss
@@ -2,6 +2,7 @@
 
 :host {
 	.mdc-menu-surface {
+		background-color: var(#{scheme-variables.$vvd-color-base});
 		border-radius: 6px;
 		box-shadow: 0 6px 8px rgba(0, 0, 0, 0.05), 0 12px 16px rgba(0, 0, 0, 0.05), 0 4px 24px rgba(0, 0, 0, 0.1);
 	}
