--- a/components/surface/src/vwc-surface.scss
+++ b/components/surface/src/vwc-surface.scss
@@ -1,9 +1,12 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 
+$default-surface-border-radius: 6px;
+$surface-border-radius: --vvd-surface-border-radius;
+
 :host {
 	.mdc-menu-surface {
 		background-color: var(#{scheme-variables.$vvd-color-base});
-		border-radius: 6px;
+		border-radius: var(#{$surface-border-radius}, $default-surface-border-radius);
 		box-shadow: 0 6px 8px rgba(0, 0, 0, 0.05), 0 12px 16px rgba(0, 0, 0, 0.05), 0 4px 24px rgba(0, 0, 0, 0.1);
 	}
 }
