--- a/components/calendar/src/vwc-calendar.scss
+++ b/components/calendar/src/vwc-calendar.scss
@@ -1,4 +1,4 @@
-@use 'vwc-calendar-variables' as calendar-variables;
+@use 'partials/vwc-calendar-variables' as calendar-variables;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
 @use '@vonage/vvd-typography/scss/typography';
 
@@ -50,7 +50,7 @@ ol {
 .calendar {
 	display: grid;
 	overflow: hidden;
-	background-color: var(#{scheme-variables.$vvd-color-neutral-20}, rgb(128, 128, 128));
+	// background-color: var(#{scheme-variables.$vvd-color-neutral-20}, rgb(128, 128, 128));
 	border-radius: 6px;
 	box-shadow: 0 0 3.64752px rgba(0, 0, 0, 0.15);
 	counter-reset: listing;
@@ -61,36 +61,72 @@ ol {
 		calendar-variables.$total-columns,
 		1fr
 	);
+
+	// @for $i from 1 through calendar-variables.$total-columns {
+	// 	/* extra 2 for the sibling events wrapper and the self containment */
+	// 	$total-cells: calendar-variables.$total-columns * calendar-variables.$total-rows + 2;
+
+	// 	$from: $i * calendar-variables.$total-rows - calendar-variables.$total-rows + 1;
+	// 	$less: $total-cells - $i * calendar-variables.$total-rows;
+
+	// 	[role="listitem"i]:nth-child(1n + #{$from}):nth-last-child(1n + #{$less}) {
+	// 		--column: #{$i};
+	// 	}
+	// }
+}
+
+.rows {
+	display: contents;
 	> [role="listitem"i] {
-		height: 35px;
-		background-color: var(#{scheme-variables.$vvd-color-base}, rgb(255, 255, 255));
-		grid-column: var(--column);
+		// background-color: var(#{scheme-variables.$vvd-color-base}, rgb(255, 255, 255));
+		position: relative;
+		grid-column: 1 / 8;
 		grid-row: var(--row);
-		&::before {
+		min-block-size: 48px;
+		pointer-events: none;
+		// &::before {
+		// 	position: absolute;
+		// 	content: counter(listing);
+		// 	counter-increment: listing;
+		// 	opacity: 0;
+		// 	pointer-events: none;
+		// }
+		&:not(:first-child)::after {
 			position: absolute;
-			content: counter(listing);
-			counter-increment: listing;
-			opacity: 0;
-			pointer-events: none;
+			// z-index: 3;
+			border-block-end: var(#{scheme-variables.$vvd-color-neutral-20}) 1px solid;
+			content: '';
+			inline-size: 100%;
+			margin-block-start: -1px;
+		}
+
+		@for $i from 1 through calendar-variables.$total-rows {
+			$current-row: $i * calendar-variables.$fraction - calendar-variables.$fraction + 1;
+			&:nth-child(#{calendar-variables.$total-rows}n + #{$i}) {
+				--row: #{$current-row} / span #{calendar-variables.$fraction};
+			}
 		}
 	}
+}
 
-	@for $i from 1 through calendar-variables.$total-rows {
-		$current-row: $i * calendar-variables.$fraction - calendar-variables.$fraction + 1;
-		[role="listitem"i]:nth-child(#{calendar-variables.$total-rows}n + #{$i}) {
-			--row: #{$current-row} / span #{calendar-variables.$fraction};
+.columns {
+	display: contents;
+	> [role="gridcell"i] {
+		position: relative;
+		grid-column: var(--column);
+		grid-row: 1 / #{calendar-variables.$total-rows * calendar-variables.$fraction + 1};
+		@for $i from 1 through calendar-variables.$total-columns {
+			&:nth-child(#{$i}) {
+				--column: #{$i};
+			}
 		}
-	}
-
-	@for $i from 1 through calendar-variables.$total-columns {
-		/* extra 2 for the sibling events wrapper and the self containment */
-		$total-cells: calendar-variables.$total-columns * calendar-variables.$total-rows + 2;
-
-		$from: $i * calendar-variables.$total-rows - calendar-variables.$total-rows + 1;
-		$less: $total-cells - $i * calendar-variables.$total-rows;
-
-		[role="listitem"i]:nth-child(1n + #{$from}):nth-last-child(1n + #{$less}) {
-			--column: #{$i};
+		&:not(:first-child)::after {
+			position: absolute;
+			block-size: 100%;
+			// z-index: 3;
+			border-inline-end: var(#{scheme-variables.$vvd-color-neutral-20}) 1px solid;
+			content: '';
+			margin-inline-start: -1px;
 		}
 	}
 }
