--- a/components/calendar/src/partials/_vwc-calendar-variables.scss
+++ b/components/calendar/src/partials/_vwc-calendar-variables.scss
@@ -5,6 +5,7 @@ $total-columns: 7;
 // the rows according to hours a day
 $total-rows: 24;
 
+$gap: 1px;
 
 // event variables
 $color: --vvd-calendar-event--primary-color;
