--- a/components/calendar/src/vwc-calendar.scss
+++ b/components/calendar/src/vwc-calendar.scss
@@ -41,13 +41,11 @@ ol {
 	display: grid;
 	grid-area: headline;
 	grid-template-columns: repeat(calendar-variables.$total-columns, 1fr);
-	h2 {
-		@include typography.typography-cat-shorthand('subtitle-2');
-		margin: 0;
-		// font-variant-numeric: tabular-nums;
-		time {
+	[role="columnheader"i] {
+		h2 {
+			@include typography.typography-cat-shorthand('subtitle-2');
 			position: relative;
-			display: block;
+			margin: 0;
 			text-align: center;
 			> em {
 				position: absolute;
@@ -73,10 +71,10 @@ ol {
 	border-radius: 6px;
 	box-shadow: 0 0 3.64752px rgba(0, 0, 0, 0.15);
 	counter-reset: listing;
-	gap: 1px;
+	gap: calendar-variables.$gap;
 	grid-area: calendar;
 	grid-auto-flow: column;
-	grid-template: repeat(calendar-variables.$total-rows * calendar-variables.$fraction, 1fr) / repeat(
+	grid-template: repeat(calendar-variables.$total-rows, 1fr) / repeat(
 		calendar-variables.$total-columns,
 		1fr
 	);
@@ -99,9 +97,9 @@ ol {
 		}
 
 		@for $i from 1 through calendar-variables.$total-rows {
-			$current-row: $i * calendar-variables.$fraction - calendar-variables.$fraction + 1;
+			$current-row: $i + 1;
 			&:nth-child(#{calendar-variables.$total-rows}n + #{$i}) {
-				--row: #{$current-row} / span #{calendar-variables.$fraction};
+				--row: #{$current-row};
 			}
 		}
 	}
@@ -112,7 +110,7 @@ ol {
 	> [role="gridcell"i] {
 		position: relative;
 		grid-column: var(--column);
-		grid-row: 1 / #{calendar-variables.$total-rows * calendar-variables.$fraction + 1};
+		grid-row: 1 / #{calendar-variables.$total-rows + 1};
 		@for $i from 1 through calendar-variables.$total-columns {
 			&:nth-child(#{$i}) {
 				--column: #{$i};
@@ -126,4 +124,11 @@ ol {
 			margin-inline-start: -1px;
 		}
 	}
+}
+
+[role="gridcell"i] {
+	display: grid;
+	gap: calendar-variables.$gap;
+	grid-auto-flow: column;
+	grid-template-rows: repeat(calendar-variables.$total-rows * calendar-variables.$fraction, 1fr);
 }
