Run the tests in parallel and add every component to its own container

--- a/ui-tests/assets/testPage.js.tmpl
+++ b/ui-tests/assets/testPage.js.tmpl
@@ -10,7 +10,10 @@ document.body.appendChild(wrapper);
 async function main() {
 	await vvdCore.settled;
 
-	${testCalls}
+	await Promise.all([
+		${testCalls}
+	]);
+
 	await waitInterval(500);
 }
 
