--- a/components/calendar/src/partials/_vwc-calendar-variables.scss
+++ b/components/calendar/src/partials/_vwc-calendar-variables.scss
@@ -5,6 +5,8 @@ $total-rows: 24;
 
 $gap: 1px;
 
+$calendar-shape: --vvd-calendar-shape;
+
 // event variables
 $color: --vvd-calendar-event--primary-color;
 $day: --vvd-calendar-event--day;
