--- a/components/datepicker/src/vwc-datepicker.scss
+++ b/components/datepicker/src/vwc-datepicker.scss
@@ -417,8 +417,12 @@ vwc-menu {
 // custom footer
 //--------------
 .vvd-datepicker-footer {
-	padding: 0 16px;
+	padding: 8px 16px 0;
 	text-align: right;
+
+	vwc-button:last-child {
+		margin-left: 8px;
+	}
 }
 
 //--------------------
